OATH Toolkit NEWS -- History of user-visible changes.           -*- outline -*-
Copyright (C) 2009-2021 Simon Josefsson.  Licensed under the GPLv3+.

* Version 2.6.8 (unreleased)

** pam_oath: Self-test improvements.
Patch from Nick Gaya <nicholasgaya+github@gmail.com>.

** liboath: Builds on Windows.
The oath_authenticate_usersfile function is just a stub that returns
an error.  This allows for use of the rest of the library on Windows.
Thanks to David Woodhouse, see
<https://gitlab.com/oath-toolkit/oath-toolkit/-/merge_requests/15>.

* Version 2.6.7 (released 2021-05-01)

** pam_oath: Support variables in usersfile string parameter.
These changes introduce the ${USER} and ${HOME} placeholder values for
the usersfile string in the pam_oath configuration file. The
placeholder values allow the user credentials file to be stored in a
file path that is relative to the user, and mimics similar behavior
found in google-authenticator-libpam.

The motivation for these changes is to allow for non-privileged
processes to use pam_oath (e.g., for 2FA with
xscreensaver). Non-privileged and non-suid programs are unable to use
pam_oath. These changes are a proposed alternative to a suid helper
binary as well.

Thanks to Jason Graham <jgraham@compukix.net> for the patch.  See
<https://gitlab.com/oath-toolkit/oath-toolkit/-/merge_requests/12>.

** doc: Fix project URL in man pages.
Thanks to Jason Graham <jgraham@compukix.net> for the patch.  Fixes
<https://gitlab.com/oath-toolkit/oath-toolkit/-/issues/19>.

** build: Drop use of libxml's AM_PATH_XML2 in favor of pkg-config.

** build: Modernize autotools usage.
Most importantly, no longer use -Werror with AM_INIT_AUTOMAKE to make
rebuilding from source more safe with future automake versions.

** Updated gnulib files.

* Version 2.6.6 (released 2021-01-20)

** oathtool: Handle HOTP --counter values larger than 0x7FFFFFFFFFFFFFFF.
Thanks to Jason Lai <jason99.lai@gmail.com> for report.

** doc: GTK-DOC manual improvements.
